<resources>
    <string name="app_name">CloudStorageMobile</string>

    <!-- String constants for AuthorizationActivity -->
    <string name="authorization_activity_title">Авторизация</string>

    <string name="authorization_login">Логин</string>
    <string name="authorization_password">Пароль</string>
    <string name="authorization_enter">Вход</string>
    <string name="to_registration_activity">Регистрация</string>

    <!-- String constants for RegistrationActivity -->
    <string name="registration_activity_title">Регистрация</string>

    <string name="registration_login">Логин</string>
    <string name="registration_password">Пароль</string>
    <string name="registration_repeat_password">Повторите пароль</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="to_authorization_activity">Авторизация</string>

    <!-- String constants for CloudStorageActivity -->
    <string name="cloud_storage_activity_title">CloudStorage</string>

    <string name="cloud_storage_name_type_title">Имя/Тип</string>
    <string name="cloud_storage_name_title">Имя</string>
    <string name="cloud_storage_type_title">Тип</string>
    <string name="cloud_storage_date_of_change_title">Дата изменения</string>
    <string name="cloud_storage_size_title">Размер</string>
    <string name="choose_folder_name_title">Создание новой папки</string>
    <string name="choose_file">Выберите файл для загрузки</string>
    <string name="choose_folder_name">Выберите название для новой папки</string>
    <string name="save_folder_name">Сохранить</string>
    <string name="cancel_folder_name">Отменить</string>

    <!-- String constants for menus in CloudStorageActivity -->
    <string name="cloud_storage_download_file_title">Скачать файл</string>
    <string name="cloud_storage_remove_file_title">Удалить файл</string>
    <string name="cloud_storage_settings_title">Настройки</string>
    <string name="cloud_storage_create_folder">Новая папка</string>
    <string name="cloud_storage_upload_file">Загрузить файл</string>
    <string name="cloud_storage_downloaded_files">Скачанные файлы</string>
    <string name="cloud_storage_previous_folder">Предыдущая папка</string>
    <string name="cloud_storage_refresh_button">Обновить</string>
    <string name="cloud_storage_exit_from_account">Выйти из аккаунта</string>

    <!-- String constants for DownloadedFilesActivity -->
    <string name="downloaded_files_activity_title">Все скачанные файлы</string>

    <string name="downloaded_files_name_title">Имя</string>
    <string name="downloaded_files_size_title">Размер</string>

    <!-- String constants for SettingsActivity -->
    <string name="settings_activity_title">Настройки</string>

    <!-- String constants for menus in DownloadedFilesActivity -->
    <string name="downloaded_files_upload_file_title">Загрузить файл</string>
    <string name="downloaded_files_remove_file_title">Удалить файл</string>

    <!-- String constants for errors -->
    <string name="empty_login">Логин не может быть пустым</string>
    <string name="empty_password">Пароль не может быть пустым</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="cant_create_file">Не удалось создать файл</string>
    <string name="send_not_full_data">Не удалось полностью отправить файл</string>
    <string name="cast_error">Не удалось отобразить ошибку</string>
    <string name="connection_error">Не удалось подключиться к серверу</string>
    <string name="sd_card_is_not_supported">SD карта не поддерживается</string>

    <!-- String constants for snackbars -->
    <string name="wait_server_response">Ожидание ответа от сервера</string>
    <string name="snackbar_text_load_file">Скачивание файла %s</string>
    <string name="snackbar_text_upload_file">Загрузка файла %s</string>
    <string name="cancel_operation">Отмена операции</string>

    <!-- String constants for SettingsActivity -->
    <string name="settings_choose_storage">Скачивать файлы на внутреннюю память</string>
    <string name="settings_auto_login">Автоматическая авторизация</string>

    <!-- String constants for storage type values -->
    <string name="internal">Внутреннее хранилище</string>
    <string name="sd_card">SD карта</string>

    <!-- String constants for popup windows -->
    <string name="choose_available_account">Выберите доступный аккаунт</string>
    <string name="authorization_in_another_account">Авторизоваться через другой аккаунт</string>
    <string name="popup_window_cancel">Отменить</string>

</resources>