<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/create_folder"
            android:title="@string/cloud_storage_create_folder" />

        <item
            android:id="@+id/upload_file"
            android:title="@string/cloud_storage_upload_file" />

        <item
            android:id="@+id/downloaded_files"
            android:title="@string/cloud_storage_downloaded_files" />

    </group>

    <group>

        <item
            android:id="@+id/settings"
            android:title="@string/cloud_storage_settings_title" />

        <item
            android:id="@+id/exit_from_account"
            android:title="@string/cloud_storage_exit_from_account" />

    </group>

</menu>