<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorization"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AuthorizationActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization_activity_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/pageTitles" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/authorization_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/authorization_login"
        android:hint="@string/authorization_login"
        android:inputType="text"
        android:textSize="@dimen/textInput" />

    <EditText
        android:id="@+id/authorization_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/authorization_password"
        android:hint="@string/authorization_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/textInput" />

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:onClick="authorization"
            android:text="@string/authorization_enter"
            android:textAllCaps="false"
            android:textSize="@dimen/buttons" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="toRegistrationActivity"
            android:text="@string/to_registration_activity"
            android:textAllCaps="false"
            android:textSize="@dimen/buttons" />

    </LinearLayout>

</LinearLayout>