<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/upload_files"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_available_account"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/pageTitles" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/authorization_in_another_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/authorization_in_another_account"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/listItemTitles" />

    <ListView
        android:id="@+id/variants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/popup_window_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/listItemTitles" />

</LinearLayout>